# arx-design

./: .buildinfo  LICENSE  Makefile  README.html  README.md  _config.yml  _toc.yml  genindex.html  intro.html  objects.inv  search.html  searchindex.js
.github/workflows/: docs.yaml  prototype.yaml
_sources/aeps/: aep-2022001-docstrings-and-comments.md
_sources/fenix-implementation-proposal/: FIP-2021-002-03-Classes.md
_sources/fenix-implementation-proposal/FIP-2021-001/: FIP-2021-001-03-Variables-and-Constants.md  FIP-2021-001-10-Import.md
_sources/fenix-implementation-proposal/FIP-2021-003/: FIP-2021-003-04-Context-Manager.md
_sources/fenix-implementation-proposal/FIP-2021-004/: FIP-2021-004-01-Classes-Multidispatch-Methods.md
aeps/: __template__.html  __template__.md  aep-2021000-aep-template.html  aep-2021000-aep-template.md  aep-2022001-docstrings-and-comments.html  aep-2022001-docstrings-and-comments.md
arxeps/: __template__.html  __template__.md  arxep-2021000-aep-template.html  arxep-2021000-aep-template.md  arxep-2021000-arxep-template.html  arxep-2021000-arxep-template.md  arxep-2022001-docstrings-and-comments.html  arxep-2022001-docstrings-and-comments.md
conda/: dev.yaml
fenix-implementation-proposal/: FIP-2021-000-FIP-Template.html  FIP-2021-000-FIP-Template.md  FIP-2021-002-00-Fenix-Language-Definition.html  FIP-2021-002-01-Convention.html  FIP-2021-002-02-Import.html  FIP-2021-002-03-Classes.html  FIP-2021-002-03-Classes.md  FIP-2021-002-04-Package.html  FIP-2021-002-04-Package.md  __template__.html
fenix-implementation-proposal/FIP-2021-001/: FIP-2021-001-00-Fenix-Language-Definition.html  FIP-2021-001-01-Napespace.html  FIP-2021-001-02-Scope.html  FIP-2021-001-03-Variables-and-Constants.html  FIP-2021-001-04-Operators.html  FIP-2021-001-05-Type-System.html  FIP-2021-001-06-Condition-Control.html  FIP-2021-001-06-Condition-Control.md  FIP-2021-001-07-Docstrings-and-Comments.html  FIP-2021-001-08-Loop-Control.html  FIP-2021-001-09-Function.html  FIP-2021-001-09-Function.md  FIP-2021-001-10-Import.html  FIP-2021-001-11-Pointer-and-Reference.html  FIP-2021-001-12-Package.html  FIP-2021-001-12-Package.md
fenix-implementation-proposal/FIP-2021-002/: FIP-2021-002-01-Debugging.html
fenix-implementation-proposal/FIP-2021-003/: FIP-2021-003-01-Classes.html  FIP-2021-003-02-Enum.html  FIP-2021-003-03-Lambda-Function.html  FIP-2021-003-04-Context-Manager.html
fenix-implementation-proposal/FIP-2021-004/: FIP-2021-004-01-Classes-Multidispatch-Methods.html
fenix-implementation-proposal/FIP-2021-005/: FIP-2021-005-01-Class-Template.html
fenix-implementation-proposal/FIP-2021-006/: FIP-2021-006-01-Error-handling.html
fenix-implementation-proposal/FIP-2021-007/: FIP-2021-007-01-Macro.html
fenix-implementation-proposal/FIP-2021-008/: FIP-2021-008-01-Match-Pattern.html
prototype/cpp/: CMakeLists.txt  Makefile  environment.yaml
prototype/cpp/include/fenix/types/: base.h  numeric.h
prototype/cpp/include/types/: base.h  numeric.h
prototype/cpp/src/: main.cpp
prototype/cpp/src/fenix/types/: numeric.cpp
prototype/cpp/src/types/: base.cpp  numeric.cpp
prototype/cpp/tests/: CMakeLists.txt  test_main.cpp  test_types.cpp
prototype/flex-bison/: .gitignore  Makefile  README.html  environment.yaml  fenix.l  fenix.lex  fenix.y  source.fnx
prototype/flex-bison/include/: fenix.h
references/: __template__.html  classes-types-structs.html  code-injection.html  code-style-conventions.html  compilation-modifier-attributes.html  concurrency.html  conditional-control.html  context-manager.html  docstrings.html  enums.html  error-handling.html  functions.html  import.html  integration-with-other-languages.html  intro.html  lambda.html  loop-control.html  macros.html  match-pattern.html  namespaces.html  operators.html  package-management.html  pointers-and-references.html  primitive-types.html  scalar-types.html  scope.html  templates.html  tuples-lists-arrays-set-dictionaries.html  type-annotation.html  variables-and-constants.html
